Use the Scrapbox icon as a copy button

--- a/src/style/content-twitter.sass
+++ b/src/style/content-twitter.sass
@@ -1,2 +1,18 @@
-.copy-button
-  border-radius: 50%
+.scrapbox-copy-tweets
+  display: flex
+  flex-basis: auto
+  flex-direction: column
+  justify-content: center
+
+  .copy-button
+    // flex
+    flex-shrink: 0
+    // cursor
+    cursor: pointer
+    // size
+    font-size: 15px
+
+    .icon
+      // size
+      width: 2em
+      height: 2em
