Fill the circle of the Scrapbox icon with CSS
Add svgo configs to svgr

--- a/src/style/content-twitter.sass
+++ b/src/style/content-twitter.sass
@@ -23,6 +23,9 @@ $fav-color: rgb(249, 24, 128)
 
     &:hover
       border-color: rgba($fav-color, 0.1)
+      g#Scrapbox
+        circle#circle
+          fill: rgba($fav-color, 0.1)
 
     .icon
       // size
