--- a/src/style/content-twitter.sass
+++ b/src/style/content-twitter.sass
@@ -13,21 +13,32 @@ $fav-color: rgb(249, 24, 128)
     cursor: pointer
     // size
     font-size: 15px
-    // border
-    border-radius: 50%
-    border-width: 3px
-    border-style: solid
-    border-color: transparent
-    // transition
-    transition-property: border-color
 
-    &:hover
-      border-color: rgba($fav-color, 0.1)
-      g#Scrapbox
-        circle#circle
-          fill: rgba($fav-color, 0.1)
-
-    .icon
+    .button
+      // flex
+      display: flex
+      align-items: stretch
+      // position
+      position: relative
       // size
-      width: 2em
-      height: 2em
+      width: 1.5em
+      height: 1.5em
+
+      .circle
+        // layout
+        position: absolute
+        top: 0px
+        bottom: 0px
+        left: 0px
+        right: 0px
+        // circle
+        border-radius: 50%
+        margin: -8px
+        // color
+        background-color: transparent
+        transition-property: background-color
+        transition-duration: 0.2s
+
+      &:hover
+        .circle
+          background-color: rgba($fav-color, 0.1)
