--- a/src/style/content-twitter.sass
+++ b/src/style/content-twitter.sass
@@ -30,6 +30,18 @@ $fav-color: rgb(249, 24, 128)
     // offset
     left: math.div(-$width, 2)
 
+@keyframes scrapbox-copy-tweets-fade-in
+  from
+    opacity: 0.0
+  to
+    opacity: 1.0
+
+@keyframes scrapbox-copy-tweets-fade-out
+  from
+    opacity: 1.0
+  to
+    opacity: 0.0
+
 .scrapbox-copy-tweets
   display: flex
   flex-basis: auto
@@ -88,3 +100,10 @@ $fav-color: rgb(249, 24, 128)
         display: inline-block
         margin-top: $tooltip-padding
         @include triangle-bottom(10px, 5px, $tooltip-color)
+
+      // animation
+      &.fade-in
+        animation: scrapbox-copy-tweets-fade-in 0.2s
+
+      &.fade-out
+        animation: scrapbox-copy-tweets-fade-out 0.2s
