--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -54,11 +54,52 @@ $bs-spacers: (
     }
   }
 
-  .text {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  .body {
+    display: flex;
+    gap: map.get($bs-spacers, 1);
     padding: map.get($bs-spacers, 1) map.get($bs-spacers, 2);
+
+    .text {
+      margin-right: auto;
+      &.ellipsis {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+
+    .button {
+      position: relative;
+      display: flex;
+      flex-shrink: 0;
+      width: map.get($bs-spacers, 4);
+      height: map.get($bs-spacers, 4);
+
+      .circle {
+        // circle
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        border-radius: 50%;
+        margin: 0;
+        // cursor
+        cursor: pointer;
+        &:hover {
+          box-shadow: 0 0 0 var(--#{$bs-prefix}focus-ring-width)
+            rgba(
+              var(--#{$bs-prefix}secondary-rgb),
+              var(--#{$bs-prefix}focus-ring-opacity)
+            );
+        }
+      }
+      .icon {
+        margin: auto;
+        width: map.get($bs-spacers, 3);
+        height: map.get($bs-spacers, 3);
+      }
+    }
   }
 }
 
