--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -66,6 +66,13 @@ $bs-spacers: (
         overflow: hidden;
         text-overflow: ellipsis;
       }
+
+      .return {
+        fill: var(--#{$bs-prefix}gray-500);
+        stroke: var(--#{$bs-prefix}gray-500);
+        width: 1rem;
+        height: 1rem;
+      }
     }
 
     .button {
