Add word-break: break-all to .tweet

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -61,6 +61,8 @@ $bs-spacers: (
 
     .text {
       margin-right: auto;
+      word-break: break-all;
+
       &.ellipsis {
         white-space: nowrap;
         overflow: hidden;
