Add header to clipboard
Set `height: 100vh` to fix the header to the top.

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -116,4 +116,6 @@ $bs-spacers: (
   display: flex;
   flex-direction: column;
   gap: map.get($bs-spacers, 1);
+  flex-shrink: 1;
+  overflow-y: scroll;
 }
