--- a/src/clipboard/index.scss
+++ b/src/clipboard/index.scss
@@ -2,5 +2,34 @@
 @use 'bootstrap/scss/bootstrap';
 
 .scrapbox-copy-tweets {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+
+  .header {
+    display: flex;
+    flex-shrink: 0;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+    white-space: nowrap;
+
+    .title {
+      font-size: 2.5rem;
+      font-weight: 500;
+      overflow: hidden;
+      text-overflow: clip;
+      margin-right: auto;
+    }
+    .close {
+      display: flex;
+
+      .icon {
+        margin: auto;
+        width: 2rem;
+        height: 2rem;
+      }
+    }
+  }
+
   @include meta.load-css('~/app/index');
 }
