--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -16,6 +16,15 @@ $tab-border-hover-color: var(--#{$bs-prefix}secondary-bg);
 $tab-border-width: var(--#{$bs-prefix}border-width);
 $tab-border-style: var(--#{$bs-prefix}border-style);
 
+@keyframes fade-in-animation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .tabs {
   display: flex;
   margin-top: map.get($bs-spacers, 1);
@@ -65,6 +74,10 @@ $tab-border-style: var(--#{$bs-prefix}border-style);
   border-width: $tab-border-width;
   border-bottom-right-radius: var(--#{$bs-prefix}border-radius);
   border-bottom-left-radius: var(--#{$bs-prefix}border-radius);
+
+  > * {
+    animation: fade-in-animation 0.2s;
+  }
 }
 
 .tweet {
