--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -25,6 +25,39 @@ $tab-border-style: var(--#{$bs-prefix}border-style);
   }
 }
 
+.commands {
+  display: flex;
+  flex-shrink: 0;
+  gap: map.get($bs-spacers, 1);
+  margin: map.get($bs-spacers, 1) map.get($bs-spacers, 1);
+
+  .command {
+    display: flex;
+    flex-grow: 1;
+    padding: 0.375rem 0.75rem;
+    appearance: none;
+    background-color: var(--#{$bs-prefix}body-bg);
+    border-color: var(--#{$bs-prefix}border-color);
+    border-style: var(--#{$bs-prefix}border-style);
+    border-width: var(--#{$bs-prefix}border-width);
+    border-radius: var(--#{$bs-prefix}border-radius);
+
+    .icon {
+      width: 2rem;
+      height: 2rem;
+      margin: auto;
+    }
+
+    &:is(:focus, :hover) {
+      box-shadow: 0 0 0 var(--#{$bs-prefix}focus-ring-width)
+        rgba(
+          var(--#{$bs-prefix}primary-rgb),
+          var(--#{$bs-prefix}focus-ring-opacity)
+        );
+    }
+  }
+}
+
 .tabs {
   display: flex;
   margin-top: map.get($bs-spacers, 1);
