--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -238,26 +238,33 @@ $tab-border-style: var(--#{$bs-prefix}border-style);
       }
     }
 
-    .button {
+    .expand-button {
       position: relative;
       display: flex;
       flex-shrink: 0;
       width: map.get($bs-spacers, 4);
       height: map.get($bs-spacers, 4);
 
-      .circle {
+      .expand-button-circle {
         position: absolute;
         top: 0;
         right: 0;
         bottom: 0;
         left: 0;
+        width: 100%;
+        height: 100%;
         margin: 0;
+        appearance: none;
         cursor: pointer;
+        background-color: transparent;
+        border-style: none;
         border-radius: 50%;
-        &:hover {
+        transition: box-shadow 0.15s ease-in-out;
+
+        &:is(:hover, :focus) {
           box-shadow: 0 0 0 var(--#{$bs-prefix}focus-ring-width)
             rgba(
-              var(--#{$bs-prefix}secondary-rgb),
+              var(--#{$bs-prefix}primary-rgb),
               var(--#{$bs-prefix}focus-ring-opacity)
             );
         }
