Add <App /> to Modal

--- a/src/content-scrapbox/index.scss
+++ b/src/content-scrapbox/index.scss
@@ -1,3 +1,5 @@
+@use 'sass:meta';
+
 .scrapbox-copy-tweets {
   &.modal-portal {
     .overlay {
@@ -24,4 +26,6 @@
       --web-kit-overflow-scrolling: touch;
     }
   }
+
+  @include meta.load-css('~/app/index');
 }
