Delete title and close button from modal

--- a/src/content-scrapbox/index.scss
+++ b/src/content-scrapbox/index.scss
@@ -28,8 +28,7 @@ $bs-prefix: sct-;
       flex-direction: column;
       max-width: 744px;
       height: 90vh;
-      padding-right: 12px;
-      padding-left: 12px;
+      padding: 10px 12px;
       margin: auto;
       background: var(--#{$bs-prefix}body-bg);
       border-radius: var(--#{$bs-prefix}border-radius);
