--- a/src/content-scrapbox/index.scss
+++ b/src/content-scrapbox/index.scss
@@ -15,6 +15,16 @@ $bs-prefix: sct-;
       left: 0;
       z-index: 1040;
       background-color: rgba(0, 0, 0, 0.8);
+      opacity: 0;
+      transition: opacity 300ms ease-in-out;
+
+      &.after-open {
+        opacity: 1;
+      }
+
+      &.before-close {
+        opacity: 0;
+      }
     }
 
     .content {
