--- a/src/content-scrapbox/style/bootstrap.scss
+++ b/src/content-scrapbox/style/bootstrap.scss
@@ -8,4 +8,5 @@ $prefix: bs- !default;
 @import 'bootstrap/scss/utilities';
 
 @import 'bootstrap/scss/root';
+@import 'bootstrap/scss/forms/form-check';
 @import 'bootstrap/scss/forms/form-select';
