--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -442,17 +442,19 @@ $focus-visible-outline: var(--#{$bs-prefix}primary) solid 1px;
   padding: map.get($bs-spacers, 1) map.get($bs-spacers, 3);
 }
 
+.settings-telomere {
+  width: 0.5rem;
+  margin-right: 0.5rem;
+  background-color: transparent;
+
+  &.updated {
+    background-color: var(--#{$bs-prefix}form-valid-color);
+  }
+}
+
 .settings-label {
   display: flex;
   font-weight: bold;
-
-  &.updated::before {
-    width: 0.5em;
-    height: 100%;
-    margin-left: -0.5em;
-    content: '';
-    background-color: var(--#{$bs-prefix}form-valid-color);
-  }
 }
 
 .settings-buttons {
