--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -515,3 +515,14 @@ $focus-visible-outline: var(--#{$bs-prefix}primary) solid 1px;
     height: 1em;
   }
 }
+
+.download-button {
+  display: flex;
+  column-gap: map.get($bs-spacers, 1);
+  align-items: center;
+
+  .download-icon {
+    width: 1.5em;
+    height: 1.5em;
+  }
+}
