--- a/src/content-twitter/index.scss
+++ b/src/content-twitter/index.scss
@@ -40,7 +40,7 @@ $fav-color: rgb(249, 24, 128);
   flex-direction: column;
   justify-content: center;
 
-  .copy-button {
+  .scrapbox-button {
     flex-shrink: 0;
     font-size: 15px;
     cursor: pointer;
