Center scrapbox button

--- a/src/content-twitter/index.scss
+++ b/src/content-twitter/index.scss
@@ -33,7 +33,11 @@ $fav-color: rgb(249, 24, 128);
   justify-content: center;
 
   .scrapbox-button {
+    display: flex;
+    flex-direction: row;
     flex-shrink: 0;
+    justify-content: center;
+    width: 2em;
     font-size: 15px;
     cursor: pointer;
 
