--- a/src/clipboard/index.scss
+++ b/src/clipboard/index.scss
@@ -14,28 +14,16 @@
   .header {
     display: flex;
     flex-shrink: 0;
+    justify-content: center;
     margin-top: 0;
     margin-bottom: 0.5rem;
     white-space: nowrap;
 
     .title {
-      margin-right: auto;
       overflow: hidden;
       font-size: 2.5rem;
       font-weight: 500;
       text-overflow: clip;
-    }
-    .close {
-      display: flex;
-      padding: 0;
-      margin-top: 0.25rem;
-      margin-bottom: auto;
-
-      .icon {
-        width: 1.75rem;
-        height: 1.75rem;
-        margin: auto;
-      }
     }
   }
 
