--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -305,7 +305,7 @@ $focus-visible-outline: var(--#{$bs-prefix}primary) solid 1px;
         white-space: nowrap;
       }
 
-      .return {
+      .return-icon {
         width: 1rem;
         height: 1rem;
         fill: var(--#{$bs-prefix}gray-500);
