--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -537,8 +537,12 @@ $focus-visible-outline: var(--#{$bs-prefix}primary) solid 1px;
     border: none;
     border-radius: 50%;
 
-    &:hover {
+    &:is(:hover, :focus) {
       background-color: var(--#{$bs-prefix}secondary);
+    }
+
+    &:focus-visible {
+      outline: $focus-visible-outline;
     }
   }
 
