--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -33,15 +33,22 @@ $focus-visible-outline: var(--#{$bs-prefix}primary) solid 1px;
 
 .button {
   padding: 0.375rem 0.75rem;
-  color: #fff;
-  background-color: var(--#{$bs-prefix}primary);
-  border-color: var(--#{$bs-prefix}primary);
   border-style: solid;
   border-width: var(--#{$bs-prefix}border-width);
   border-radius: var(--#{$bs-prefix}border-radius);
   transition:
     box-shadow 0.15s ease-in-out,
     outline 0.15s ease-in-out;
+
+  &:focus-visible {
+    outline: $focus-visible-outline;
+  }
+}
+
+.button-primary {
+  color: #fff;
+  background-color: var(--#{$bs-prefix}primary);
+  border-color: var(--#{$bs-prefix}primary);
 
   &:is(:focus, :hover) {
     box-shadow: 0 0 0 var(--#{$bs-prefix}focus-ring-width)
@@ -50,9 +57,19 @@ $focus-visible-outline: var(--#{$bs-prefix}primary) solid 1px;
         var(--#{$bs-prefix}focus-ring-opacity)
       );
   }
+}
 
-  &:focus-visible {
-    outline: $focus-visible-outline;
+.button-secondary {
+  color: #fff;
+  background-color: var(--#{$bs-prefix}secondary);
+  border-color: var(--#{$bs-prefix}secondary);
+
+  &:is(:focus, :hover) {
+    box-shadow: 0 0 0 var(--#{$bs-prefix}focus-ring-width)
+      rgba(
+        var(--#{$bs-prefix}secondary-rgb),
+        var(--#{$bs-prefix}focus-ring-opacity)
+      );
   }
 }
 
